@@ -10,6 +10,8 @@ import java.util.ArrayList;
 import java.util.DoubleSummaryStatistics;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
+import java.util.Comparator;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,6 +21,77 @@ public class InsightQueryService {
     private final DailyIntakeSummaryRepository dailyIntakeSummaryRepository;
     private final MealLogRepository mealLogRepository;
 
+    public WeeklyInsightSummaryResponse getWeeklySummary(LocalDate baseDate) {
+        LocalDate weekStart = baseDate.with(DayOfWeek.MONDAY);
+        LocalDate weekEnd = baseDate.with(DayOfWeek.SUNDAY);
+
+        List<DailyIntakeSummary> summaries = dailyIntakeSummaryRepository.findAllByDateBetween(weekStart, weekEnd);
+        List<MealLog> mealLogs = mealLogRepository.findAllByMealDateBetween(weekStart, weekEnd);
+
+        int totalMeals = mealLogs.size();
+
+        long goodDays = summaries.stream().filter(summary -> "green".equalsIgnoreCase(summary.getDayColor())).count();
+        long overeatDays = summaries.stream().filter(summary -> "red".equalsIgnoreCase(summary.getDayColor())).count();
+        long lowSodiumDays = summaries.stream().filter(summary -> "yellow".equalsIgnoreCase(summary.getDayColor())).count();
+
+        DoubleSummaryStatistics scoreStats = summaries.stream()
+                .map(DailyIntakeSummary::getDayScore)
+                .filter(score -> score != null)
+                .mapToDouble(Float::doubleValue)
+                .summaryStatistics();
+
+        double totalKcal = summaries.stream()
+                .map(DailyIntakeSummary::getTotalKcal)
+                .filter(kcal -> kcal != null)
+                .mapToDouble(Float::doubleValue)
+                .sum();
+
+        List<WeeklyInsightSummaryResponse.TrendDay> trendDays = summaries.stream()
+                .sorted(Comparator.comparing(DailyIntakeSummary::getDate))
+                .map(summary -> new WeeklyInsightSummaryResponse.TrendDay(
+                        summary.getDate(),
+                        summary.getDayScore(),
+                        summary.getDayColor(),
+                        summary.getTotalKcal(),
+                        summary.getTotalCarbG(),
+                        summary.getTotalProteinG(),
+                        summary.getTotalSodiumMg()
+                ))
+                .toList();
+
+        List<WeeklyInsightSummaryResponse.CategoryStat> categoryTop3 = mealLogs.stream()
+                .map(MealLog::getCategory)
+                .map(category -> (category == null || category.isBlank()) ? "UNCATEGORIZED" : category)
+                .collect(Collectors.groupingBy(category -> category, Collectors.counting()))
+                .entrySet()
+                .stream()
+                .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
+                .limit(3)
+                .map(entry -> new WeeklyInsightSummaryResponse.CategoryStat(entry.getKey(), entry.getValue()))
+                .toList();
+
+        WeeklyInsightSummaryResponse.Summary summary = new WeeklyInsightSummaryResponse.Summary(
+                totalMeals,
+                (int) goodDays,
+                (int) overeatDays,
+                (int) lowSodiumDays,
+                scoreStats.getCount() > 0 ? scoreStats.getAverage() : 0.0,
+                totalMeals > 0 ? totalKcal / totalMeals : 0.0
+        );
+
+        WeeklyInsightSummaryResponse.Trends trends = new WeeklyInsightSummaryResponse.Trends(trendDays);
+
+        WeeklyInsightSummaryResponse.Data data = new WeeklyInsightSummaryResponse.Data(
+                weekStart,
+                weekEnd,
+                summary,
+                trends,
+                categoryTop3
+        );
+
+        return new WeeklyInsightSummaryResponse(true, data);
+    }
+
     public InsightReportResponse getReport(String range, LocalDate baseDate) {
         InsightReportResponse.ReportRange reportRange = parseRange(range);
         LocalDate startDate = calculateStartDate(reportRange, baseDate);
@@ -26,15 +99,11 @@ public class InsightQueryService {
 
         List<DailyIntakeSummary> summaries = dailyIntakeSummaryRepository.findAllByDateBetween(startDate, endDate);
 
-        int totalMeals = summaries.stream()
-                .map(DailyIntakeSummary::getTotalMeals)
-                .filter(value -> value != null && value > 0)
-                .mapToInt(Integer::intValue)
-                .sum();
+        int totalMeals = mealLogRepository.findAllByMealDateBetween(startDate, endDate).size();
 
-        long goodDays = summaries.stream().filter(summary -> Boolean.TRUE.equals(summary.getGoodDay())).count();
-        long overeatDays = summaries.stream().filter(summary -> Boolean.TRUE.equals(summary.getOvereatDay())).count();
-        long lowSodiumDays = summaries.stream().filter(summary -> Boolean.TRUE.equals(summary.getLowSodiumDay())).count();
+        long goodDays = summaries.stream().filter(summary -> "green".equalsIgnoreCase(summary.getDayColor())).count();
+        long overeatDays = summaries.stream().filter(summary -> "red".equalsIgnoreCase(summary.getDayColor())).count();
+        long lowSodiumDays = summaries.stream().filter(summary -> "yellow".equalsIgnoreCase(summary.getDayColor())).count();
 
         DoubleSummaryStatistics scoreStats = summaries.stream()
                 .map(DailyIntakeSummary::getDayScore)
@@ -72,7 +141,7 @@ public class InsightQueryService {
 
         List<InsightCalendarResponse.Day> days = summaries.stream()
                 .map(this::toCalendarDay)
-                .collect(Collectors.toList());
+                .toList();
 
         InsightCalendarResponse.Data data = new InsightCalendarResponse.Data(
                 startDate,
@@ -86,25 +155,34 @@ public class InsightQueryService {
     public DayMealsResponse getDayMeals(LocalDate date) {
         DailyIntakeSummary summary = dailyIntakeSummaryRepository.findByDate(date).orElse(null);
 
-        OffsetDateTime start = date.atStartOfDay().atOffset(ZoneOffset.UTC);
-        OffsetDateTime end = date.plusDays(1).atStartOfDay().atOffset(ZoneOffset.UTC).minusNanos(1);
-
-        List<MealLog> mealLogs = mealLogRepository.findAllByOrderedAtBetween(start, end);
+        List<MealLog> mealLogs = mealLogRepository.findAllByMealDate(date);
         List<DayMealsResponse.Meal> meals = mealLogs.stream()
                 .map(mealLog -> new DayMealsResponse.Meal(
                         mealLog.getId(),
-                        mealLog.getSource(),
+                        mealLog.getMenu(),
+                        mealLog.getCategory(),
                         mealLog.getMealTime(),
-                        mealLog.getOrderedAt()
+                        mealLog.getMealDate(),
+                        mealLog.getCreatedAt(),
+                        mealLog.getKcal(),
+                        mealLog.getSodiumMg(),
+                        mealLog.getProteinG(),
+                        mealLog.getCarbG(),
+                        mealLog.getTotalScore()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         DayMealsResponse.Data data = new DayMealsResponse.Data(
                 date,
                 summary != null ? summary.getTotalKcal() : null,
                 summary != null ? summary.getTotalSodiumMg() : null,
                 summary != null ? summary.getTotalProteinG() : null,
-                summary != null ? summary.getTotalMeals() : meals.size(),
+                summary != null ? summary.getTotalCarbG() : null,
+                meals.size(),
+                summary != null ? summary.getTotalSnack() : null,
+                summary != null ? summary.getTotalNight() : null,
+                summary != null ? summary.getDayScore() : null,
+                summary != null ? summary.getDayColor() : null,
                 meals
         );
 
@@ -127,20 +205,18 @@ public class InsightQueryService {
 
     private InsightCalendarResponse.Day toCalendarDay(DailyIntakeSummary summary) {
         List<String> tags = new ArrayList<>();
-        if (Boolean.TRUE.equals(summary.getLowSodiumDay())) {
-            tags.add("저염 성공");
-        }
-        if (Boolean.TRUE.equals(summary.getOvereatDay())) {
+        if ("red".equalsIgnoreCase(summary.getDayColor())) {
             tags.add("과식 폭주");
-        }
-        if (Boolean.TRUE.equals(summary.getGoodDay())) {
+        } else if ("yellow".equalsIgnoreCase(summary.getDayColor())) {
+            tags.add("주의 필요");
+        } else if ("green".equalsIgnoreCase(summary.getDayColor())) {
             tags.add("좋은 습관 유지");
         }
 
         DayHighlight highlight = DayHighlight.NEUTRAL;
-        if (Boolean.TRUE.equals(summary.getOvereatDay())) {
+        if ("red".equalsIgnoreCase(summary.getDayColor())) {
             highlight = DayHighlight.BAD;
-        } else if (Boolean.TRUE.equals(summary.getGoodDay()) || Boolean.TRUE.equals(summary.getLowSodiumDay())) {
+        } else if ("green".equalsIgnoreCase(summary.getDayColor())) {
             highlight = DayHighlight.GOOD;
         }
 
